--- a/package.json
+++ b/package.json
@@ -45,7 +45,12 @@
     "webpack-dev-server": "2.3.0"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.3",
+    "apollo-link-ws": "^1.0.18",
+    "graphql": "^14.4.2",
     "react": "15.4.2",
-    "react-dom": "15.4.2"
+    "react-apollo": "^2.5.8",
+    "react-dom": "15.4.2",
+    "subscriptions-transport-ws": "^0.9.16"
   }
 }
