--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "apollo-boost": "^0.4.3",
     "apollo-client": "^2.6.3",
     "apollo-link-ws": "^1.0.18",
+    "axios": "^0.19.0",
     "graphql": "^14.4.2",
     "react": "15.4.2",
     "react-apollo": "^2.5.8",
